--- a/static/base.css
+++ b/static/base.css
@@ -6,14 +6,44 @@ body {
     background: linear-gradient(
       rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0.2)
-    ), url("./background.jpg") no-repeat center center fixed;
+    ), url("./background.jpg") no-repeat fixed;
+    background-size: cover;
+    background-position: center;
 }
 
 .backimage {
   background: linear-gradient(
     rgba(0, 0, 0, 0.6),
     rgba(0, 0, 0, 0.6)
-  ), url("./background.jpg") no-repeat center center fixed;
+  ), url("./background.jpg") no-repeat fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+
+#content {
+  width: 100%;
+  padding: 15px;
+  position: relative;
+}
+
+.content-blur {
+  background-attachment: fixed;
+  overflow: visible;
+  -webkit-filter: blur(8px);
+  filter: blur(8px);
+  z-index: -1;
+}
+
+.content-blur,
+.content-text {
+width: 100%;
+min-height: 100%;
+position: absolute;
+padding: 15px;
+top: 0;
+left: 0;
+color: white;
 }
  
 body {
@@ -132,8 +162,9 @@ body {
   .wrapper {
     display: flex;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     align-items: stretch;
+    height: auto;
 }
 
 input {
