--- a/xmasg/static/xmasg/xmasg.css
+++ b/xmasg/static/xmasg/xmasg.css
@@ -36,32 +36,6 @@ a, a:hover, a:focus {
     transition: all 0.3s;
 }
 
-#content {
-    width: 100%;
-    padding: 15px;
-    position: relative;
-}
-
-.content-blur {
-    background-attachment: fixed;
-    overflow: visible;
-    -webkit-filter: blur(8px);
-    filter: blur(8px);
-    z-index: -1;
-}
-
-.content-blur,
-.content-text {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  padding: 15px;
-  top: 0;
-  left: 0;
-  color: white;
-}
-
-
 
 #content p, #content li, #content td, #content th {
     font-size: 14px;
